--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # visit https://giscus.app to get your Giscus ids
-NEXT_PUBLIC_GISCUS_REPO= "DVSoai/My-Blog-and-Portfolio"
-NEXT_PUBLIC_GISCUS_REPOSITORY_ID="R_kgDON0wE6Q"
+NEXT_PUBLIC_GISCUS_REPO="DVSoai/My-Blog-and-Portfolio"
+NEXT_PUBLIC_GISCUS_REPOSITORY_ID="R_kgDON0yIpg"
 NEXT_PUBLIC_GISCUS_CATEGORY="Q&A"
-NEXT_PUBLIC_GISCUS_CATEGORY_ID="DIC_kwDON0wE6c4CmrsF"
+NEXT_PUBLIC_GISCUS_CATEGORY_ID="DIC_kwDON0yIps4Cmr1t"
 NEXT_PUBLIC_UTTERANCES_REPO=
 NEXT_PUBLIC_DISQUS_SHORTNAME=
 
